# leesvr

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_protobuf.sh  codegen.sh  gameSvr.cpp  gen_code.sh  main.cpp
3rd/algorithms/include/: heap.h
3rd/kcp-fec/: reedsolomon.cpp  socketsessionudp.cpp
3rd/libco/: co.mk  testmain.cpp
3rd/libevent/: Makefile  config.status
3rd/libevent/test/: bench
3rd/lua-kcp-fec/: CMakeLists.txt  Makefile  galois_table.c  kcp_test  sess.cpp  socketsessionudp.h  testkcpcli.cpp  testudpcli.cpp  testudpsvr.cpp
3rd/phxrpc/: AUTHORS
3rd/socket-server/: socket-server  socket_server.c  socket_server.h  test.c  testevent.cpp  testudp.c  udpcli
doc/: .gitignore  Makefile  Signal.cpp  c1 排查进程死循环、死锁.txt  c10.cpp  c4.cpp  c7 基类析构函数需要为虚函数.txt  c7.cpp  c9.cpp  test_ptr.cpp  testconst.cpp  testgettime.c  testhiredis.cpp  testsignal.c  testsingleton.cpp
game/logService/: Makefile  testZlog  testZlog.cpp  zlogDebug.conf  zlogRelease.conf
game/logger/: logger.conf
game/proto/: test.proto
game/proto/cpp/: test.pb.cc  test.pb.h
game/testService/: test1.cpp  testzlog.sh
game/utils/: Makefile  mySignal.cpp  mySignal.h  mySignalTest.cpp  utils.cpp  utils.h
lib/algorithms/include/: 2darray.h
lib/base/: Singleton.h
lib/kcp-fec/: fec.cpp
lib/libevent/: Makefile.in  config.h  configure  libtool
lib/libevent/include/event2/: event-config.h
lib/libevent/sample/: becat
lib/libevent/test/: bench_cascade  regress
lib/my-socket-server/: Makefile  socket_epoll.h  socket_server.cpp  socket_server.h  testtcp.c
libs/coost/: CMakeLists.txt  readme.md  readme_cn.md  xmake.lua
libs/coost/.github/: FUNDING.yml
libs/coost/.github/workflows/: android.yml  fedora.yml  ios.yml  linux.yml  macos.yml  musl.yml  win.yml
libs/coost/include/co/: all.h  atomic.h  closure.h  co.h  cout.h  def.h  defer.h  error.h  fast.h  fastream.h  fastring.h  flag.h  god.h  http.h  json.h  log.h  mem.h  path.h  rpc.h  so.h  ssl.h  stl.h  table.h  tasked.h  tcp.h  vector.h
libs/coost/src/: cout.cc  error.cc  fast.cc  fastring.cc  fs.cc  fs_win.cc  json.cc  mem.cc  path.cc  rand.cc  tasked.cc  time.cc  time_win.cc  unitest.cc  xmake.lua
libs/coost/src/co/: close.h  co.cc  hook.h  hook_win.cc  io_event.cc  sched.cc  sched.h  (+3 more)
libs/coost/test/: closure.cc  cout.cc  defer.cc  err.cc  json.cc  log.cc  mem.cc  stack.cc  str.cc  tasked.cc  time.cc  tw.cc  xmake.lua  xx.cc
libs/coost/unitest/: alien.cc  co.cc  fastream.cc  fastring.cc  flag.cc  fs.cc  god.cc  hash.cc  json.cc  main.cc  mem.cc  path.cc  time.cc  xmake.lua
libs/hiredis/: test.c
libs/kcp-fec/: Makefile
libs/libco/: CMakeLists.txt  Makefile  example_echocli.cpp
libs/libevent/: aclocal.m4  config.h.in  evsignal-internal.h
libs/libevent/test/: bench_http  bench_httpclient
libs/my-socket-server/: socket_kqueue.h
libs/phxrpc/: Makefile  build.sh  phxrpc.mk
libs/phxrpc/codegen/: phxrpc_pb2client  phxrpc_pb2server  phxrpc_pb2service  phxrpc_pb2tool  test_proto_utils
libs/socket-server/: udpsvr
libs/utils/: CMakeLists.txt  Signal.cpp  Signal.h  Utils.cpp  Utils.h  mySignalTest.cpp
libs/zlog/: CMakeLists.txt
libs/zlog/doc/: makefile
tests/: Makefile  c1 排查进程死循环、死锁.txt  c10 共享内存扩容会有什么问题.txt  c4.cpp  c5 STl list使用会有什么问题.txt  c7.cpp  c9.cpp  test20240402.cpp  test_atomic.cpp  test_coost.cpp  test_dp.cpp  test_operator_new.cpp  test_rvalue.cpp  test_thread.cpp  test_unorderdmap.cpp  testprotobuf.cpp  testtmp.cpp
(+43 files in other folders)
